--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </header>
 
     <!-- Services -->
-    <section id="freebies">
+    <section id="services">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -92,7 +92,7 @@
               <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Resources</h4>
-            <p class="text-muted">In this section you will find the coolest resources I use for my projects, and a couple made by myself.</p>
+            <p class="text-muted">In this section you will find the coolest resources I use for my projects, along with a few made by myself.</p>
           </div>
           <div class="col-md-4">
             <span class="fa-stack fa-4x">
@@ -100,7 +100,7 @@
               <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
             </span>
             <h4 class="service-heading">Ratm e sord</h4>
-            <p class="text-muted">Commissions are now open. Please feel free to email me the details and we'll work something out!</p>
+            <p class="text-muted">Commissions are now open. Please feel free to email me the details of your project and we'll work something out!</p>
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading text-uppercase">Portfolio</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h3 class="section-subheading text-muted">Here's a little showcase of what I make.</h3>
           </div>
         </div>
         <div class="row">
@@ -409,8 +409,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Contact Us</h2>
-            <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            <h2 class="section-heading text-uppercase">Contact Me</h2>
+            <h3 class="section-subheading text-muted"></h3>
           </div>
         </div>
         <div class="row">
@@ -454,7 +454,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2018</span>
+            <span class="copyright">Copyright &copy; Contagious Graphic 2018</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
