--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <i class="fas fa-circle fa-stack-2x text-primary"></i>
               <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
             </span>
-            <h4 class="service-heading">Ratm e sord</h4>
+            <h4 class="service-heading">Commissions</h4>
             <p class="text-muted">Commissions are now open. Please feel free to email me the details of your project and we'll work something out!</p>
           </div>
         </div>
